# services/petdata/openapi.json
@@ -87,20 +87,6 @@
             ],
             "title": "Aka"
           },
-          "behavior_mod_tags": {
-            "anyOf": [
-              {
-                "items": {
-                  "type": "string"
-                },
-                "type": "array"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Behavior Mod Tags"
-          },
           "birth_date": {
             "anyOf": [
               {
@@ -133,6 +119,17 @@
               }
             ],
             "title": "Color Category"
+          },
+          "custody_location": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Custody Location"
           },
           "days_in_custody": {
             "anyOf": [
@@ -170,28 +167,6 @@
               }
             ],
             "title": "Is Adoptable"
-          },
-          "is_foster_care": {
-            "anyOf": [
-              {
-                "type": "boolean"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Is Foster Care"
-          },
-          "is_in_kennel": {
-            "anyOf": [
-              {
-                "type": "boolean"
-              },
-              {
-                "type": "null"
-              }
-            ],
-            "title": "Is In Kennel"
           },
           "location": {
             "anyOf": [
@@ -278,6 +253,20 @@
             "title": "Animal Id",
             "type": "string"
           },
+          "behavior_mod_tags": {
+            "anyOf": [
+              {
+                "items": {
+                  "type": "string"
+                },
+                "type": "array"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Behavior Mod Tags"
+          },
           "cats_compatibility_notes": {
             "anyOf": [
               {
@@ -300,7 +289,7 @@
             ],
             "title": "Cats Compatible"
           },
-          "commands_known": {
+          "commands_notes": {
             "anyOf": [
               {
                 "type": "string"
@@ -309,7 +298,7 @@
                 "type": "null"
               }
             ],
-            "title": "Commands Known"
+            "title": "Commands Notes"
           },
           "dogs_compatibility_notes": {
             "anyOf": [
@@ -333,7 +322,7 @@
             ],
             "title": "Dogs Compatible"
           },
-          "housebreaking_status": {
+          "housebreaking_notes": {
             "anyOf": [
               {
                 "type": "string"
@@ -342,7 +331,18 @@
                 "type": "null"
               }
             ],
-            "title": "Housebreaking Status"
+            "title": "Housebreaking Notes"
+          },
+          "housebroken": {
+            "anyOf": [
+              {
+                "type": "boolean"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Housebroken"
           },
           "id": {
             "anyOf": [
@@ -376,6 +376,17 @@
               }
             ],
             "title": "Kids Compatible"
+          },
+          "knows_commands": {
+            "anyOf": [
+              {
+                "type": "boolean"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Knows Commands"
           },
           "things_dislikes": {
             "anyOf": [
